--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,15 +1,21 @@
----
----
-
-@INPROCEEDINGS{dscpr,
+@inproceedings{dscpr,
   abbr={ICASSP},
-  bibtex_show={true},
   author={Barowsky, Madeleine and Mariona, Alexander and Calmon, Flavio P.},
-  booktitle={ICASSP 2021 - 2021 IEEE International Conference on Acoustics,
-  Speech and Signal Processing (ICASSP),},
+  booktitle={IEEE International Conference on Acoustics, Speech and Signal
+      Processing (ICASSP)},
   title={Predictive Coding for Lossless Dataset Compression},
   year={2021},
   pages={1545-1549},
   doi={10.1109/ICASSP39728.2021.9413447},
   selected={false}
+}
+
+@article{bvip,
+  abbr={PREPRINT},
+  author={Mariona, Alexander and Esfahanizadeh, Homa and G.~L.~D'Oliveira,
+  Rafael and M\'{e}dard, Muriel},
+  title={Some Bivariate Invariance Principles},
+  year={2022},
+  selected={true},
+  pdf={isit2022.pdf}
 }
