Coauthors for ISIT 2022

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,6 @@
 @inproceedings{dscpr,
   abbr={ICASSP},
-  author={Barowsky, Madeleine and Mariona, Alexander and Calmon, Flavio P.},
+  author={Barowsky, M. and Mariona, A. and Calmon, F. P.},
   booktitle={IEEE International Conference on Acoustics, Speech and Signal
       Processing (ICASSP)},
   title={Predictive Coding for Lossless Dataset Compression},
@@ -12,10 +12,10 @@
 
 @article{bvip,
   abbr={PREPRINT},
-  author={Mariona, Alexander and Esfahanizadeh, Homa and G.~L.~D'Oliveira,
-  Rafael and M\'{e}dard, Muriel},
+  author={A. Mariona and H. Esfahanizadeh and
+    R. G. L. D'Oliveira and M. M\'edard},
   title={Some Bivariate Invariance Principles},
   year={2022},
   selected={true},
-  pdf={isit2022.pdf}
+  pdf={ISIT_2022_L.pdf}
 }
