--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,8 +14,8 @@
   abbr={PREPRINT},
   author={A. Mariona and H. Esfahanizadeh and
     R. G. L. D'Oliveira and M. M\'edard},
-  title={Some Bivariate Invariance Principles},
+  title={A Bivariate Invariance Principle},
   year={2022},
   selected={true},
-  pdf={ISIT_2022_L.pdf}
+  pdf={itw-22-long.pdf}
 }
